# spacemouse_driver

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  setup.sh  uncrustify.cfg
cmake/: spacemouse_driverConfig.cmake.in
include/spacemouse_driver/: connection_state.hpp  device_model.hpp  driver.hpp  driver_manager.hpp  input_types.hpp  logger.hpp  spacemouse_driver.hpp
src/: driver.cpp  driver_manager.cpp
src/connection/: connection_manager.cpp  connection_manager.hpp  connection_method.cpp  connection_method.hpp  hid_backend.cpp  hid_backend.hpp
src/device/: device_registry.hpp  shared_device_manager.hpp
src/driver/: driver_context.hpp
src/input/: callback_dispatcher.cpp  callback_dispatcher.hpp  input_processor.cpp  input_processor.hpp
src/types/: device_types.hpp  mapping_types.hpp
src/util/: double_buffer.hpp
udev/: 60-spacemouse.rules
